Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78818

MultiPointTouchArea is not reliably responsive inside a flickable ListView with pressDelay

XMLWordPrintable

    • 5dad0afa9e0905bd384878327f19cc7faf3d8d9f (qt/qtdeclarative/5.12) 0012f8bd152a36a67abc696465f27d612625b5d9 (qt/qtdeclarative/5.14)

      When using MultiPointTouchArea inside a delegate of a ListView it does not process touch events nearly as well as mouse events when the list becomes flickable.

      Expected: Touch events should be handled as reliably well as mouse events are for a MultiPointTouchArea inside a flickable ListView

      Attachments:
      flickable-touch.qml: Sample QML file that can be run with qmlscene to observe the issue. Try toggling each delegate when the list is flickable.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            phillip.arthur Phillip Arthur
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: