MultiPointTouchArea: don't emit canceled() during ordinary touch release

Amends 0012f8bd152a36a67abc696465f27d612625b5d9. For some reason
tst_QQuickMultiPointTouchArea::inFlickableWithPressDelay()'s check
    QCOMPARE(flickable->property("cancelCount").toInt(), 0);
passed on Qt 5, but we get a canceled() signal in Qt 6.

Task-number: QTBUG-78818
Change-Id: Ib77bc4fc5774bd697247351c274bb5deb8cc4009
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>